2009-04-04  Kevin Ollivier  <kevino@theolliviers.com>

        Build fixes for wxMac/Tiger.

        * dependencies.bkl:
        * wxwk-settings.bkl:

2009-04-04  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Add missing header.

        * WebKitSupport/FrameLoaderClientWx.cpp:

2009-03-30  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.
        
        Add events to allow apps to override handling for JS prompts and 
        window object cleared events.
        
        https://bugs.webkit.org/show_bug.cgi?id=24948

        * WebFrame.h:
        * WebKitSupport/ChromeClientWx.cpp:
        (WebCore::ChromeClientWx::runJavaScriptAlert):
        (WebCore::ChromeClientWx::runJavaScriptConfirm):
        (WebCore::ChromeClientWx::runJavaScriptPrompt):
        * WebKitSupport/EditorClientWx.cpp:
        (WebCore::EditorClientWx::pageDestroyed):
        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::hasWebView):
        (WebCore::FrameLoaderClientWx::windowObjectCleared):
        * WebView.cpp:
        (wxWebViewAlertEvent::wxWebViewAlertEvent):
        (wxWebViewConfirmEvent::wxWebViewConfirmEvent):
        (wxWebViewPromptEvent::wxWebViewPromptEvent):
        (wxWebViewWindowObjectClearedEvent::wxWebViewWindowObjectClearedEvent):
        * WebView.h:

2009-03-28  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Remove call to now private method.

        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::prepareForDataSourceReplacement):

2009-03-02  Kevin Ollivier  <kevino@theolliviers.com>

        Build fixes for wxWidgets Mac trunk build.

        * WebView.h:
        * bindings/python/webview.i:
        * bindings/python/wxwebkit-py.bkl:
        * dependencies.bkl:
        * presets/wxwebkit.bkl:

2009-02-11  Dimitri Dupuis-latour  <dupuislatour@apple.com>

        Stub out InspectorClientWx::hiddenPanels.
